Se restauró lo adicionado al archivo Blogspot y al archivo Estilos.css

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -4,7 +4,11 @@
     <link rel="stylesheet" href="css/Estilos.css">
 </head>
     <body>
-        <h1>Este periodico informa los paises que brindan hospedaje para las playas</h1>
-        <p>Este es el inicio parrafo</p>
-    </body>
+        <div id="container"> 
+        <div id="post"> 
+            <h1>Este es el interesante post</h1>
+            <p>Y este es un parrafo que explica lo que se puede hacer con cada Branch</p>
+            </div>
+        </div> 
+   <body>
 </html>
