--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,7 +7,7 @@
         <div id="container"> 
             <div>
                 <div id="cabecera">
-                    cabecera
+                    Hyperblog
                 <div id="post"> 
             <h1>Este es el interesante post</h1>
             <p>Y este es un parrafo que explica lo que se puede hacer con cada Branch</p>
