Se creó el tagline

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,10 +8,13 @@
             <div>
                 <div id="cabecera">
                     Hyperblog
+                    <span id="tagline">Tu blog de confianza
+
+                    </span>
                 <div id="post"> 
             <h1>Este es el interesante post</h1>
             <p>Y este es un parrafo que explica lo que se puede hacer con cada Branch</p>
             </div>
         </div> 
-   <body>
+        <body>
 </html>
