--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,6 +7,7 @@
         <div id="container"> 
         <div id="post"> 
             <h1>Este es el interesante post</h1>
+            <h1>Los blogs son la mejor manera de compartir ideas</h1>
             <p>Y este es un parrafo que explica lo que se puede hacer con cada Branch</p>
             </div>
         </div> 
